# watchman

./: .gitattributes  .gitignore  CONTRIBUTING.md  Makefile  README-Integrationbranch.md  README.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml
Proposal/: aegis-architecture-current-future.mmd  aegis-plan.tex  aegis-prd.md  aegis-project-plan.md  architecture-v2.mmd  architecture-v2.txt  architecture.mmd  architecture.txt  outline-v2.md  plan-draft.md  proposal.tex
desktop/aegis-launcher/: README.md  package-lock.json  package.json
docs/: aegis-cift-freeform-runtime-certification-2026-06-27.md  aegis-local-agent-visual-guide.html  aegis-runtime-spine.md  aegis-watchman-capstone-release-2026-06-26.md  aegis-watchman-demo-scenario.md  aegis-watchman-getting-started.html  aegis-watchman-quickstart.html  aegis-watchman-quickstart.md  aegis-watchman-release-readiness-2026-06-25.md  nimbus-promotion-decision-2026-06-26.md  nimbus-redteam-eval.md  nimbus-training-corpus.md  trace-collection-harness.md  watchman-artifact-triage.md  watchman-open-pr-harvest.md
docs/plans/: 2026-06-21-002-feat-v4-3-sealed-holdout-plan.md  2026-06-23-002-feat-watchman-runtime-roadmap-plan.md  2026-06-23-003-feat-parallel-runtime-cift-work-plan.md  2026-06-23-003-feat-redteam-runtime-target-plan.md  2026-06-23-004-feat-nimbus-canary-critic-plan.md  2026-06-23-005-feat-nimbus-redteam-eval-plan.md  2026-06-27-001-feat-desktop-observability-surface-plan.md
introspection/: AUDIT_CIFT_PAPER_ALIGNMENT_2026-06-21.md  README.md
introspection/data/: lineage.json  prompts.jsonl  prompts_dp_honey_lite_v1.jsonl  prompts_dp_honey_lite_v3.jsonl  prompts_dp_honey_lite_v4_3_sealed.jsonl  prompts_dp_honey_lite_v4_3_sealed_selector_windows.jsonl  prompts_hard.jsonl  prompts_hard_v2.jsonl  prompts_hard_v3.jsonl  runtime_turns_watchman_synthetic_v11_crossed_sealed_holdout_qwen3_4b_immutable_revision.jsonl  runtime_turns_watchman_synthetic_v11_crossed_selected_choice_sealed_holdout_qwen3_4b_immutable_revision.jsonl  runtime_turns_watchman_v11_freeform_972_sealed_holdout_qwen3_4b.jsonl  runtime_turns_watchman_v11_freeform_972_sealed_holdout_qwen3_4b_tagged.jsonl  runtime_turns_watchman_v12_freeform_1032_sealed_holdout_qwen3_4b.jsonl  runtime_turns_watchman_v12_freeform_1032_sealed_holdout_qwen3_4b_tagged.jsonl  runtime_turns_watchman_v13_freeform_1107_sealed_holdout_qwen3_4b.jsonl  runtime_turns_watchman_v14_freeform_1122_sealed_holdout_qwen3_4b.jsonl  structured_prompts_watchman_synthetic_v11_crossed_sealed_holdout_qwen3_4b_immutable_revision.jsonl  structured_prompts_watchman_synthetic_v11_crossed_selected_choice_sealed_holdout_qwen3_4b_immutable_revision.jsonl  structured_prompts_watchman_v11_freeform_972_sealed_holdout_qwen3_4b.jsonl  structured_prompts_watchman_v12_freeform_1032_sealed_holdout_qwen3_4b.jsonl  structured_prompts_watchman_v12_freeform_supplement_240_calibration_qwen3_4b.jsonl  structured_prompts_watchman_v12_freeform_supplement_60_sealed_holdout_qwen3_4b.jsonl  structured_prompts_watchman_v13_freeform_1107_sealed_holdout_qwen3_4b.jsonl  structured_prompts_watchman_v13_freeform_supplement_300_calibration_qwen3_4b.jsonl  structured_prompts_watchman_v13_freeform_supplement_75_sealed_holdout_qwen3_4b.jsonl  structured_prompts_watchman_v14_freeform_1122_sealed_holdout_qwen3_4b.jsonl  trace_records_grok_watchman_v10_960_sealed_holdout_quarantine.jsonl  trace_records_watchman_v11_freeform_972_sealed_holdout.jsonl  (+10 more)
introspection/tests/: test_cift.py  (+68 more)
scripts/: check_artifact_boundaries.py  run-aegis-desktop-launcher.sh
(+848 files in other folders)
